# rust-cfb-compound-file-format

./: .gitignore  CFB_PROJECT_GUIDE.md  Cargo.toml  QUICK_START.md  README.md  cfb_status.sh  create_20gb_cfb.sh  create_incremental_cfb.sh  create_test_file.rs  test.cfb  test_memory_rust.rs
examples/: cfbtool.rs  create_1gb_cfb.rs  create_large_cfb.rs  create_large_cfb_v2.rs  create_test_cfb.rs  create_test_simple.rs  modify_streams.rs  test_memory_usage.rs  traverse_cfb.rs  traverse_streams.rs
src/: cffi.rs  ffi.rs  lib.rs
