[package]
name = "cfb"
version = "0.10.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "Read/write Compound File Binary (structured storage) files"
repository = "https://github.com/mdsteele/rust-cfb"
keywords = ["cfb", "storage", "structured"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
fnv = "1.0"
icu_casemap = "1.5"
uuid = "1"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
rand_pcg = "0.3"
time = "0.3"

[lib]
crate-type = ["rlib", "staticlib"]

[[example]]
name = "create_1gb_cfb"
path = "examples/create_1gb_cfb.rs"

[[example]]
name = "modify_streams"
path = "examples/modify_streams.rs"

[[example]]
name = "traverse_streams"
path = "examples/traverse_streams.rs"

[[example]]
name = "create_test_simple"
path = "examples/create_test_simple.rs"
